Adiciona GitHub Top Languages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>GitHub Top Languages</title>
+  <title>GitHub Principais Linguagens</title>
   <style>
     body {
       font-family: sans-serif;
